infra/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 3000
      targetPort: 3000
