infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
    - host: weatherapp.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 8080
